--- a/src/app/component/app/app.component.html
+++ b/src/app/component/app/app.component.html
@@ -1,9 +1,9 @@
-<form (ngSubmit)="onSubmit()" class="id-form">
-    <mat-form-field class="example-full-width">
-      <input matInput>
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="id-form">
+    <mat-form-field >
+      <input matInput formControlName="id">
     </mat-form-field>
     <button class="button" type="submit">Go!</button>
-  </form>
+</form>
 
-  <div class="title">{{videoId$ | async}}</div>
-  <app-youtube-video [videoId]="videoId$ | async"></app-youtube-video>
+<div class="title">{{videoId$ | async}}</div>
+<app-youtube-video [videoId]="videoId$ | async"></app-youtube-video>
