mixer-2 improve: Video component (#6)
* Moved video selector into video component

* Added pretty styling

* Allowed entering of entire urls

Co-authored-by: William <william@kulin.com.au>

--- a/src/app/component/app/app.component.scss
+++ b/src/app/component/app/app.component.scss
@@ -1,11 +1,3 @@
 :host {
-  display: block;
-
-  .title {
-    font-size: xx-large;
-  };
-
-  .matInput {
-    border: slategrey;
-  }
+  display: flex;
 }
