--- a/src/app/component/app/app.component.html
+++ b/src/app/component/app/app.component.html
@@ -1,9 +1,2 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()" class="id-form">
-    <mat-form-field >
-      <input matInput formControlName="id">
-    </mat-form-field>
-    <button class="button" type="submit">Go!</button>
-</form>
-
-<div class="title">{{videoId$ | async}}</div>
-<app-youtube-video [videoId]="videoId$ | async"></app-youtube-video>
+<app-youtube-video></app-youtube-video>
+<app-youtube-video></app-youtube-video>
