--- a/src/app/component/youtube-video/youtube-video.component.html
+++ b/src/app/component/youtube-video/youtube-video.component.html
@@ -1,1 +1,8 @@
-<youtube-player [videoId]='videoId'></youtube-player>
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="id-form">
+  <mat-form-field >
+    <input matInput formControlName="id">
+  </mat-form-field>
+  <button class="button" type="submit">Go!</button>
+</form>
+<div class="title">{{videoId$ | async}}</div>
+<youtube-player [videoId]='videoId$ | async'></youtube-player>
