mixer-8 feat: Audio crossfading between two videos (#12)
* Added crossfade utilities

* Added infrastructure to get crossfade down to video players

* Added buttons to crossfade between the two videos

* Format fixes

Co-authored-by: William <william@kulin.com.au>

--- a/src/app/component/app/app.component.html
+++ b/src/app/component/app/app.component.html
@@ -1,2 +1,5 @@
-<app-youtube-video></app-youtube-video>
-<app-youtube-video></app-youtube-video>
+<div class="videos">
+  <app-youtube-video [initialVolume]="100" [playerId]="player1"></app-youtube-video>
+  <app-youtube-video [initialVolume]="0" [playerId]="player2"></app-youtube-video>
+</div>
+<app-crossfade-buttons [func]="fadeFunc"></app-crossfade-buttons>
