--- a/src/app/component/youtube-video/youtube-video.component.html
+++ b/src/app/component/youtube-video/youtube-video.component.html
@@ -4,5 +4,5 @@
   </mat-form-field>
   <button class="button" type="submit">Go!</button>
 </form>
-<div class="title">{{videoId$ | async}}</div>
+<div class="title">{{videoTitle$ | async}}</div>
 <youtube-player #player [videoId]='videoId$ | async'></youtube-player>
