added search bar and two buttons

--- a/src/app/component/app/app.component.html
+++ b/src/app/component/app/app.component.html
@@ -1,3 +1,4 @@
+<app-search-bar></app-search-bar>
 <div class="videos">
   <app-youtube-video [initialVolume]="100" [playerId]="player1"></app-youtube-video>
   <app-youtube-video [initialVolume]="0" [playerId]="player2"></app-youtube-video>
