Mixer-21 improve: Crossfade button enhancement and positioning (#22)
* All buttons added and styling when clicked, crossfade only on crossfade

* Shuffled button positions

Co-authored-by: William <william@kulin.com.au>

--- a/src/app/component/app/app.component.html
+++ b/src/app/component/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="videos">
   <app-youtube-video [initialVolume]="100" [playerId]="player1"></app-youtube-video>
+  <app-crossfade-buttons [crossfade]="fadeFunc"></app-crossfade-buttons>
   <app-youtube-video [initialVolume]="0" [playerId]="player2"></app-youtube-video>
 </div>
-<app-crossfade-buttons [func]="fadeFunc"></app-crossfade-buttons>
