--- a/src/app/component/youtube-video/youtube-video.component.html
+++ b/src/app/component/youtube-video/youtube-video.component.html
@@ -1,8 +1,13 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()" class="id-form">
-  <mat-form-field >
-    <input matInput formControlName="id">
-  </mat-form-field>
-  <button class="button" type="submit">Go!</button>
-</form>
-<div class="title">{{videoTitle$ | async}}</div>
-<youtube-player #player [videoId]='videoId$ | async'></youtube-player>
+<div class="container form-background">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" class="id-form">
+    <mat-form-field appearance="outline" color="accent">
+      <input matInput formControlName="id">
+    </mat-form-field>
+    <button mat-button class="button" type="submit">Go!</button>
+  </form>
+</div>
+
+<div class="container video-background">
+  <div class="title">{{videoTitle$ | async}}</div>
+  <youtube-player #player [videoId]='videoId$ | async'></youtube-player>
+</div>
